--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,20 @@ services:
     volumes:
     - ./app:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=mypostgres
+      - DB_USER=tester
+      - DB_PASS=thisispassword
+    depends_on:
+      - db
+
+  db:
+    image: postgres:11-alpine
+    environment:
+      - POSTGRES_DB=mypostgres
+      - POSTGRES_USER=tester
+      - POSTGRES_PASSWORD=thisispassword
